Scrollbar Track Fix

--- a/src/app.css
+++ b/src/app.css
@@ -9,14 +9,12 @@
     .dark ::-webkit-scrollbar-track{
             background-color: #202020;
             -webkit-border-radius: 10px;
-            border-radius: 10px;
     }
         
 
     ::-webkit-scrollbar-track{
             background-color: #fefefe;
             -webkit-border-radius: 10px;
-            border-radius: 10px;
         }
         
     ::-webkit-scrollbar-thumb {
